--- a/Tester/build.gradle
+++ b/Tester/build.gradle
@@ -11,9 +11,9 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
-    implementation "indi.arrowyi:AutoConfig:1.1"
-    annotationProcessor  "indi.arrowyi:AutoConfig:1.1"
-    kapt "indi.arrowyi:AutoConfig:1.1"
+    implementation(project(':ConfigManager'))
+    annotationProcessor  (project(':ConfigManager'))
+    kapt (project(':ConfigManager'))
     implementation 'com.google.auto.service:auto-service:1.0-rc7'
     annotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
 }
