--- a/ConfigManager/build.gradle
+++ b/ConfigManager/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     api 'com.google.auto.service:auto-service:1.0-rc7'
     implementation 'com.squareup:javapoet:1.12.1'
+    implementation group: 'javax.validation', name: 'validation-api', version: '1.0.0.GA'
     annotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
 }
 
